# hayashi

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.md  PRIVACY.md  README.md  TERMS.md  fly.prod.toml  fly.toml  package-lock.json  package.json  turbo.json
.github/workflows/: plugin-native-build.yml
apps/client/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/client/src/: App.tsx  index.css  main.tsx
apps/client/src/audio/: engine.ts  (+12 more)
apps/desktop/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: main.ts  style.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  midi.rs  rtpmidi.rs
apps/server/: fix-db.mjs  package.json
apps/server/scripts/: db-push.mjs  hayashi-essentia-analyze.py  hayashi-faust-render.py
apps/server/src/: midiRelay.ts  og.test.ts  og.ts  routes.test.ts  routes.ts  server.test.ts  server.ts  storage.ts  worker.ts
docs/: faust-spec-design.md
docs/superpowers/plans/: 2026-05-08-hayashi-implementation.md  2026-05-08-hayashi-pivot.md  2026-05-09-drum-kit-editor.md  2026-05-09-hayashi-music-lab.md  2026-05-09-hayashi-timing-workstation.md  2026-05-12-midi-bridge-companion-impl.md  2026-05-13-discord-native-monetization-and-room-naming.md  2026-05-14-workstation-editor-redesign.md  2026-05-15-pivot-to-plugin-engine.md  2026-05-15-server-side-vst-clap-export.md  2026-05-15-track-fx-chain-autofill.md  2026-05-17-plugin-generation-mvp-todo.md  2026-05-17-plugin-generation-optimization-platform.md
docs/superpowers/specs/: 2026-05-08-hayashi-design.md  2026-05-09-drum-kit-editor-design.md  2026-05-12-midi-bridge-companion-design.md  2026-05-13-midi-bridge-companion-redesign.md  2026-05-13-plugin-marketplace-design.md  (+3 more)
native/optimizer/: CMakeLists.txt  README.md
native/optimizer/cmake/: FindEigen3.cmake
native/optimizer/src/: main.cpp
(+225 files in other folders)
