[package]
name = "hayashi-midi-bridge"
version = "0.1.0"
description = "Hayashi MIDI Bridge Companion"
edition = "2021"
rust-version = "1.70"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
url = "2"
midir = "0.10"
rtpmidi = "0.4.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
